--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,10 +15,11 @@ header {
   justify-content: center;
 }
 .header__social {
-  padding-left: 0;
-  margin-right: 0;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-
+  gap: 0.8rem;
+  position: absolute;
   left: 0;
   bottom: 3rem;
 }
