--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,5 @@
+@import url("https://googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
 :root {
   --bg-color: #1f242d;
   --second-bg-color: #323946;
@@ -11,7 +13,9 @@
 .portfolio h2 {
   margin-bottom: 4rem;
 }
-
+.writeup {
+  font-size: 1rem;
+}
 /*this is me trying to make the imagese in the portfolio container squared*/
 .portfolio-container img {
   width: 600px;
