--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
   text-decoration: none;
 }
 :root {
-  --color-bg: #0a2647;
-  --color-bg-variant: #144272;
+  --color-bg: #151516;
+  --color-bg-variant: #011e3d;
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #c0bebe;
