--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@
   text-decoration: none;
 }
 :root {
-  --color-bg: #151516;
-  --color-bg-variant: #011e3d;
+  --color-bg: #1f1f38;
+  --color-bg-variant: #2c2c6c;
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-white: #c0bebe;
+  --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
   --container-width-lg: 75%; /*size of the container we are going to use on different*/
   --container-width-md: 86%; /*screen size*/
@@ -48,6 +48,7 @@ h1 {
 }
 section {
   margin-top: 8rem;
+  height: 100vh;
 }
 section > h2,
 section > h5 {
