--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,8 +1,30 @@
-.navbar {
-  position: absolute;
-  display: flex-start;
-  bottom: 0;
-  margin-top: 0;
-  width: 100%;
-  
+nav {
+  background: rgba(0, 0, 0, 0.3);
+  width: max-content;
+  display: block;
+  padding: 0.7rem 1.7rem;
+  z-index: 2;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-58%);
+  bottom: 2rem;
+  display: flex;
+  gap: 0.8rem;
+  border-radius: 3rem;
+  backdrop-filter: blur(15px);
+}
+nav a {
+  background: transparent;
+  padding: 0.9rem;
+  border-radius: 58%;
+  display: flex;
+  color: var(--color-light);
+  font-size: 1.1rem;
+}
+nav:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+nav a.active {
+  background: var(--color-bg);
+  color: var(--color-white);
 }
