--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,12 +1,16 @@
-* {
-  margin: 5rem 0rem;
-  padding: 0 3rem;
-}
+
 :root {
-  --bg-color: #1f242d;
-  --second-bg-color: #2c74b3;
+  --bg-color: #1f1f38;
+  --second-bg-color: #2c2c6c;
   --text-color: #fff;
   --main-color: rgba(77, 181, 255, 0.4);
+}
+.services-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  margin: 0 2rem;
+  padding: 0 3rem;
 }
 .services h2 {
   margin-bottom: 5rem;
@@ -32,6 +36,7 @@ change all this color craze, find ya better color pallete and use it for the web
   text-align: center;
   border: 0.2rem solid var(--bg-color);
   transition: 0.5s ease;
+  
 }
 
 .services-container .services-box:hover {
@@ -45,10 +50,10 @@ change all this color craze, find ya better color pallete and use it for the web
 }
 
 .services-box h3 {
-  font-size: 2.6rem;
+  font-size: 2rem;
 }
 
 .services-box p {
-  font-size: 1.6rem;
+  font-size: 1rem;
   margin: 1rem 0 3rem;
 }
