--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -19,13 +19,19 @@
   gap: 2.8rem;
 }
 
+.portfolio h5 {
+  font-size: 0.95rem;
+  margin-bottom: 0;
+}
+
 .portfolio-container .portfolio-box {
   position: relative;
   border-radius: 2rem;
-  box-shadow: 0 0 1rem var(--bg-color);
+  box-shadow: 0 0 1rem var(--color-bg);
   overflow: hidden;
   display: flex;
 }
+
 .portfolio-box img {
   width: 100%;
   transition: 0.5s ease;
@@ -41,7 +47,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), var(--main-color));
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(71, 59, 187, 0.4));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,5 +83,5 @@
 
 .portfolio-layer a i {
   font-size: 2rem;
-  color: var(--second-bg-color);
+  color: black; /*need work and the react icon pack for the links*/
 }
