--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,9 +1,3 @@
-:root {
-  --bg-color: #1f1f38;
-  --second-bg-color: #2c2c6c;
-  --text-color: #fff;
-  --main-color: rgba(77, 181, 255, 0.4);
-}
 .services-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -11,10 +5,11 @@
   margin: 0 2rem;
   padding: 0 3rem;
 }
-.services h2 {
-  margin-bottom: 5rem;
-  padding: 5rem;
+.services h5 {
+  font-size: 0.95rem;
+  margin-bottom: 0;
 }
+
 /*
 change all this color craze, find ya better color pallete and use it for the website, dark based colors tho
 */
@@ -29,24 +24,28 @@ change all this color craze, find ya better color pallete and use it for the web
 
 .services-container .services-box {
   flex: 1 1 30rem;
-  background: var(--second-bg-color);
+  background: var(--color-bg-variant);
   padding: 3rem 2rem 4rem;
   border-radius: 2rem;
   text-align: center;
-  border: 0.2rem solid var(--bg-color);
-  transition: 0.5s ease;
+  border: 0.1rem solid var(--color-bg);
+  transition: var(--transition);
+}
+.services-box h3 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: var(--color-primary);
 }
 
 .services-container .services-box:hover {
-  border-color: var(--main-color);
-  transform: scale(1.02);
+  border-color: var(--color-primary-variant);
   background: transparent;
   cursor: default;
 }
 
 .services-box i {
   font-size: 7rem;
-  color: var(--main-color);
+  color: var(--color-primary-variant);
 }
 
 .services-box h3 {
