--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -23,7 +23,9 @@
   font-size: 0.95rem;
   margin-bottom: 0;
 }
+.portfolio h4{
 
+}
 .portfolio-container .portfolio-box {
   position: relative;
   border-radius: 2rem;
@@ -47,7 +49,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(71, 59, 187, 0.4));
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(71, 59, 187, 0.4));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,6 +66,7 @@
 
 .portfolio-layer h4 {
   font-size: 2rem;
+  color: var(--color-primary);
 }
 
 .portfolio-layer p {
