--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -17,15 +17,14 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   gap: 2.8rem;
+  padding: 0 1rem;
 }
 
 .portfolio h5 {
   font-size: 0.95rem;
   margin-bottom: 0;
 }
-.portfolio h4{
 
-}
 .portfolio-container .portfolio-box {
   position: relative;
   border-radius: 2rem;
@@ -59,7 +58,11 @@
   transform: translateY(100%);
   transition: 0.5s ease;
 }
-
+.section-head{
+  padding-left: 1rem;
+  padding-bottom: 1rem;
+  color: var(--color-primary);
+}
 .portfolio-box:hover .portfolio-layer {
   transform: translateY(0);
 }
