--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -52,7 +52,17 @@ textarea {
   resize: none;
   color: var(--color-white);
 }
-
+.scroll_down{
+  font-size: 3rem;
+ 
+ position: relative;
+  left: 10rem;
+  top: 2rem;
+  right: -3rem;
+  padding: 0;
+  margin: 0;
+ 
+}
 @media screen and (max-width: 1024px) {
   .container.contact__container {
     grid-template-columns: 1fr;
