--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,9 +48,10 @@ after the social icons*/
   position: absolute;
   right: -2rem;
   bottom: 5rem;
-  transform: rotate(90deg);
-  font-weight: 300;
+
+ 
   font-weight: 0.9rem;
+  font-size: 7rem;
 }
 
 /*This is what we call media query: here we define the css that will be apply for a
