--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,7 +1,7 @@
 .about__container {
   display: grid;
-  grid-template-columns: 35% 50%;
-  gap: 15%;
+  grid-template-columns: 40% 60%;
+  gap: 10%;
 }
 .about__me {
   width: 100%;
@@ -45,7 +45,7 @@
 }
 .about__icon {
   color: var(--color-primary);
-  font-size: 1.4rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 .about__card h5 {
@@ -56,10 +56,13 @@
   color: var(--color-light);
 }
 .about__content p {
-  margin: 2rem 0 2.6rem;
+  margin: 2rem 0 1rem;
   color: var(--color-light);
 }
-
+.btn1{
+  margin-left: 38%;
+  margin-top: 0;
+}
 @media screen and(max-width:1024px) {
   .about__container {
     grid-template-columns: 1fr;
