--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header {
-  height: 120vh; /*vh correspond to viewport height*/
-  padding-top: 7rem;
+  height: 110vh; /*vh correspond to viewport height*/
+  padding-top: 2rem;
   overflow: hidden;
 }
 .header__container {
@@ -9,7 +9,7 @@ header {
   position: relative;
 }
 .cta {
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   display: flex;
   gap: 1.2rem;
   justify-content: center;
@@ -21,25 +21,22 @@ header {
   gap: 0.8rem;
   position: absolute;
   left: 0;
-  bottom: 3rem;
+  bottom: 4rem;
+padding-bottom: 0;
+ margin-bottom: 0;
 }
-.header__social::after {
-  /*the after tag help us to draw the vertical line we have
-after the social icons*/
-  content: "";
-  width: 1px;
-  height: 2rem;
-  background: var(--color-primary);
+.header__social > a{
+  font-size: 2rem;
 }
 .my_image {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
-  height: 35rem;
+  height: 30rem;
   position: absolute;
   left: calc(
     50% - 11rem
   ); /*this help to place the image to the middle of screen*/
-  margin-top: 4rem;
+  margin-top: 2rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 0rem 1.5rem 1.5rem 1.5rem;
@@ -48,8 +45,6 @@ after the social icons*/
   position: absolute;
   right: -2rem;
   bottom: 5rem;
-
- 
   font-weight: 0.9rem;
   font-size: 7rem;
 }
