--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,5 +1,9 @@
 @import url("https://googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
+#portfolio {
+  width: 80%;
+  margin: 0 10%;
+}
 .portfolio h2 {
   margin-bottom: 4rem;
 }
@@ -9,7 +13,7 @@
 /*this is me trying to make the imagese in the portfolio container squared*/
 .portfolio-container img {
   width: 200px;
-  height: 210px;
+  height: 310px;
 }
 
 .portfolio-container {
@@ -48,7 +52,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(71, 59, 187, 0.4));
+  background: linear-gradient(rgba(43, 43, 43, 0.726), rgb(0, 0, 0));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,45 +62,46 @@
   transform: translateY(100%);
   transition: 0.5s ease;
 }
-.section-head{
+.section-head {
   padding-left: 1rem;
   padding-bottom: 1rem;
   color: var(--color-primary);
+  font-size: 1.8rem;
 }
 .portfolio-box:hover .portfolio-layer {
   transform: translateY(0);
 }
 
 .portfolio-layer h4 {
-  font-size: 1rem;
+  font-size: 2.2rem;
   color: var(--color-primary);
 }
 
 .portfolio-layer p {
-  font-size: 0.8rem;
-  margin: 0.3rem 0 0.5rem;
+  font-size: 1rem;
+  margin: 0.3rem 0 0 0;
 }
 
 .portfolio-layer a {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 5rem;
-  height: 5rem;
+  width: 3.5rem;
+  height: 3.5rem;
   background: var(--text-color);
   border-radius: 50%;
   margin-bottom: 0;
+  padding: 0;
 }
 
-
- .see-more{
+.see-more {
   color: var(--color-primary);
   font-size: 1rem;
   margin: 0;
   padding: 0;
-  
+  display: block;
 }
-.see-more:hover{
+.see-more:hover {
   color: var(--text-color);
-  transition: .2s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
