--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -106,50 +106,10 @@
   transition: 0.2s ease-in-out;
 }
 
-.portfolio__container {
-  display: grid;
-  grid-template-columns: repeat(3, 2fr);
-  align-items: center;
-  margin: 0
-;
-padding: 0;
-  
-
-}
-
-.portfolio__item {
-  background: var(--color-bg-variant);
-  padding: 0.5rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
-  transition: var(--transition);
-  width: 100%;
-  
-}
-
-.portfolio__item:hover {
-  border-color: var(--color-primary-variant);
-  background: transparent;
-}
-
-.portfolio__item-image {
-  border-radius: 1.5rem;
-  overflow: hidden;
-}
-
-.portfolio__item h3 {
-  margin: 1.2rem 0 1.2rem;
-}
-
-.portfolio__item-cta {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
 
 /*############# MEDIA QUERIES (MEDIUM DEVICES) ########### */
 @media  screen and (max-width: 1024px) {
-  .portfolio__container {
+  .portfolio-container {
       grid-template-columns: 1fr 1fr;
       gap: 1.2rem;
   }
@@ -157,7 +117,7 @@ padding: 0;
 
 /*############# MEDIA QUERIES (SMALL DEVICES) ########### */
 @media  screen and (max-width: 600px) {
-  .portfolio__container {
+  .portfolio-container {
       grid-template-columns: 1fr;
       gap: 1rem;
   }
