--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer__container {
-  background-color: var(--color-primary);
+  background-color: var(--color-primary-variant);
   margin-top: 2rem;
   text-align: center;
   padding: 2rem 0;
