--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,11 @@ html {
   display: none;
 }
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Raleway", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
+  background-image: url(../src/assets/bg-texture.png);
 }
 .container {
   width: var(--container-width-lg);
