--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,7 +10,7 @@ nav {
   gap: 0.8rem;
   border-radius: 3rem;
   backdrop-filter: blur(15px);
-  height: 90%;
+  height: max-content;
 }
 
 nav a {
@@ -30,4 +30,42 @@ nav a:hover {
 nav a.active {
   background: var(--color-bg);
   color: var(--color-light);
+}
+@media screen and (max-width:600px) {
+  nav{
+    background: rgba(0, 0, 0, 0.3);
+    width:max-content;
+    display: block;
+    padding: 0.7rem 1.7rem;
+    z-index: 2;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 2rem;
+    display: flex;
+    gap: .8rem;
+    border-radius: 3rem;
+    backdrop-filter: blur(15px);
+    height: auto;
+}
+
+nav a{
+    background: transparent;
+    padding: 0.9rem;
+    border-radius: 50%;
+    display: flex;
+    color: var(--color-light);
+    font-size: 1.1rem;
+}
+
+nav a:hover{
+    background: rgba(0, 0, 0, 0.3);
+}
+
+nav a.active{
+    background: var(--color-bg);
+    color: var(--color-light);
+}
+
+
 }
