--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -75,6 +75,9 @@
   .about__content p {
     margin: 1rem 0 1.5rem;
   }
+  h2{
+    padding-bottom: 0.5rem;
+  }
 }
 @media screen and(max-width:600px) {
   .about__me {
@@ -90,5 +93,9 @@
   }
   .about__content p {
     margin: 1.5rem 0;
+  }
+  
+  h2{
+    padding-bottom: 0.5rem;
   }
 }
