--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -29,25 +29,49 @@
   color: var(--color-primary);
 }
 
-@media screen and(max-width:1024px) {
-  .experience__container {
-    grid-template-columns: 1fr;
+
+@media only screen and (max-width: 1024px) {    
+  .experience__container{
+      grid-template-columns: 1fr;
   }
-  .experience__container > div {
-    width: 80%;
-    padding: 2rem;
-    margin: 0 auto;
+  
+  .experience__details > div{
+      width: 88%;
+      padding:1rem;
+      margin: 0 auto;
   }
-  .experience__content {
-    padding: 1rem;
+
+  .experience__content{
+      padding: 1rem;
   }
 }
-@media screen and(max-width:600px) {
-    .experience__container{ 
-        gap: 1rem;
-    }
+
+@media only screen and (max-width: 600px) {    
+.about__container{
+  grid-template-columns: 1fr;
+  gap: 0;
+}
+
+.about__me{
+  width: 65%;
+  margin: 0 auto 3rem;
+}
+
+.about__cards{
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.about__me__content{
+  text-align: center;
+}
+
+.about__me__content p{
+  margin: 1.5rem 0;
+  }
 .experience__container > div{
-    width: 100%;
-    padding: 2rem 1rem;
+  width: 100%;
+  padding:2rem 1rem
+
 }
-}
+} 
