--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,5 +1,3 @@
-@import url("https://googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
 #portfolio {
   width: 80%;
   margin: 0 10%;
@@ -10,11 +8,7 @@
 .writeup {
   font-size: 1rem;
 }
-/*this is me trying to make the imagese in the portfolio container squared*/
-.portfolio-container img {
-  width: 200px;
-  height: 310px;
-}
+
 
 .portfolio-container {
   display: grid;
@@ -97,15 +91,24 @@
 .see-more {
   color: var(--color-primary);
   font-size: 1rem;
-  margin: 0;
-  padding: 0;
+ 
   display: block;
 }
 .see-more:hover {
   color: var(--primary-variant);
   transition: 0.2s ease-in-out;
 }
-
+  
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.95rem 1.2rem;
+  border-radius: 75%;
+  cursor: pointer;
+  border: 1px solid var(--color-light);
+  transition: var(--transition);
+}
 
 /*############# MEDIA QUERIES (MEDIUM DEVICES) ########### */
 @media  screen and (max-width: 1024px) {
