--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -76,39 +76,31 @@
   margin: 0.3rem 0 0 0;
 }
 
-.portfolio-layer a {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 3.5rem;
-  height: 3.5rem;
-  background: var(--text-color);
-  border-radius: 50%;
-  margin-bottom: 0;
-  padding: 0;
+.btn {
+  width: max-content;
+  display: inline-block;
+  color: var(--color-primary);
+  padding: 0.75rem 1.2rem;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  border: 1px solid var(--color-light);
+  transition: var(--transition);
 }
-
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
+}
 .see-more {
   color: var(--color-primary);
   font-size: 1rem;
- 
   display: block;
 }
 .see-more:hover {
   color: var(--primary-variant);
   transition: 0.2s ease-in-out;
 }
-  
-.btn {
-  width: max-content;
-  display: inline-block;
-  color: var(--color-primary);
-  padding: 0.95rem 1.2rem;
-  border-radius: 75%;
-  cursor: pointer;
-  border: 1px solid var(--color-light);
-  transition: var(--transition);
-}
+ 
 
 /*############# MEDIA QUERIES (MEDIUM DEVICES) ########### */
 @media  screen and (max-width: 1024px) {
