--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -8,8 +8,6 @@
 .writeup {
   font-size: 1rem;
 }
-
-
 .portfolio-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -17,12 +15,10 @@
   gap: 2.8rem;
   padding: 0 1rem;
 }
-
 .portfolio h5 {
   font-size: 0.95rem;
   margin-bottom: 0;
 }
-
 .portfolio-container .portfolio-box {
   position: relative;
   border-radius: 2rem;
@@ -30,9 +26,10 @@
   overflow: hidden;
   display: flex;
 }
-
+/*got a problem with image sizes*/
 .portfolio-box img {
   width: 100%;
+  height: 100%;
   transition: 0.5s ease;
 }
 
