--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -27,6 +27,15 @@
   display: flex;
 }
 
+/*got a problem with image sizes*/
+.portfolio-box img {
+  width: 100%;
+  align-self: center;
+  transition: 0.5s ease;
+  overflow: hidden;
+}
+
+
 .portfolio-box:hover img {
   transform: scale(1.1);
 }
