--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,20 +1,24 @@
-header {
-  height: 110vh; /*vh correspond to viewport height*/
+header{
+  height: 110vh; 
   padding-top: 2rem;
   overflow: hidden;
 }
-.header__container {
+
+.header__container{
   height: 100%;
   text-align: center;
   position: relative;
+
 }
-.cta {
+
+.cta{
   margin-top: 2rem;
   display: flex;
   gap: 1.2rem;
   justify-content: center;
 }
-.header__social {
+
+.header__social{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,45 +29,56 @@ header {
 padding-bottom: 0;
  margin-bottom: 0;
 }
+
 .header__social > a{
   font-size: 2rem;
 }
-.my_image {
+.header__social::after{
+  content: '';
+  width: 1px;
+  height: 2rem;
+  background: var(--color-primary);
+}
+
+.my_image{
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
   height: 30rem;
   position: absolute;
   left: calc(
     50% - 11rem
-  ); /*this help to place the image to the middle of screen*/
+  );
   margin-top: 2rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 0rem 1.5rem 1.5rem 1.5rem;
 }
-.scroll__down {
-    right: -2rem;
+
+.scroll__down{
+  position: absolute;
+  right: -2rem;
   bottom: 5rem;
   font-weight: 0.9rem;
   font-size: 7rem;
 }
 
-/*This is what we call media query: here we define the css that will be apply for a
-specific screen*/
-@media screen and(max-width:1024px) {
-  header {
-    height: 68vh;
+@media only screen and(max-width:1024px) {
+  header{
+      height:68vh
   }
+  
 }
-@media screen and(max-width:600px) {
-  header {
-    height: auto;
+
+@media only screen and (max-width: 600px) {
+  
+  header{
+      height:100vh;
+      
   }
-  .header__social,
-  .scroll__down {
-    display: none;
+
+  .header__social, .scroll__down{
+      display: none;
   }
-  a{
-    display: none;
-  }
+
 }
+
