--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,3 +1,4 @@
+
 #portfolio {
   width: 80%;
   margin: 0 10%;
@@ -33,8 +34,12 @@
   align-self: center;
   transition: 0.5s ease;
   overflow: hidden;
+ 
+  height: 80%;
 }
-
+img{
+  
+}
 
 .portfolio-box:hover img {
   transform: scale(1.1);
