--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -37,9 +37,6 @@
  
   height: 80%;
 }
-img{
-  
-}
 
 .portfolio-box:hover img {
   transform: scale(1.1);
@@ -104,7 +101,8 @@ img{
   display: block;
 }
 .see-more:hover {
-  color: var(--primary-variant);
+  background: var(--color-white);
+  color: var(--color-bg);
   transition: 0.2s ease-in-out;
 }
  
