--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,16 +1,25 @@
 header{
-  height: 110vh; 
+  height: 85vh; 
   padding-top: 2rem;
   overflow: hidden;
+  padding: 8rem, 2rem;
+  
+
 }
 
 .header__container{
-  height: 100%;
-  text-align: center;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  gap: 2rem;
+  padding-top: 5rem;
 
 }
-
+.intro{
+ 
+  padding-top: 10rem;
+  justify-content: center;
+  
+}
 .cta{
   margin-top: 2rem;
   display: flex;
@@ -37,11 +46,11 @@ padding-bottom: 0;
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
   height: 30rem;
-  position: absolute;
-  left: calc(
-    50% - 11rem
+    left: calc(
+    0% - 11rem
   );
   margin-top: 2rem;
+  margin-left: 20rem;
   border-radius: 12rem 12rem 0 0;
   overflow: hidden;
   padding: 0rem 1.5rem 1.5rem 1.5rem;
