--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,8 +1,28 @@
 nav {
-  background: rgba(94, 94, 94, 0.418);
+  background: rgba(0, 0, 0, 0.118);
+  width: 100vw;
+  padding: 0.2rem;
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  height: max-content;
+ display: grid;
+ grid-template-columns: 40% 60%; 
+ 
+}
+ .link{
+  justify-self: flex-end;
+  display: flex;
+  justify-content: center;
+  
+
+}
+/*
+
+ background: rgba(94, 94, 94, 0.418);
   width: max-content;
-  padding: 0.7rem 1.7rem;
-  z-index: 2;
+  padding: 0.7rem 0.7rem;
+  z-index: 3;
   position: fixed;
   left: 2%;
   transform: translateX(-50%);
@@ -10,25 +30,29 @@ nav {
   gap: 0.8rem;
   border-radius: 3rem;
   backdrop-filter: blur(15px);
-  height: max-content;
-}
+  height: 80vh;
+  justify-content: center;
 
+*/
 nav a {
   background: transparent;
   padding: 0.9rem;
   border-radius: 50%;
-  display: flex;
+  /* display: flex;  */
   color: var(--color-white);
   font-size: 1.1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 nav a:hover {
-  background: rgba(0, 0, 0, 0.3);
+ 
 }
 
 nav a.active {
-  background: var(--color-bg);
+  stroke: rgb(248, 0, 0);
   color: var(--color-light);
 }
 @media screen and (max-width:600px) {
