--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,44 +1,36 @@
 nav {
   background: rgba(0, 0, 0, 0.118);
   width: 100vw;
-  padding: 0.2rem;
+  padding: 0.2rem 10%;
   z-index: 3;
   position: fixed;
   top: 0;
   height: max-content;
  display: grid;
- grid-template-columns: 40% 60%; 
+ grid-template-columns: 40% 60%;
+
+ justify-self: center;
  
+}
+.navbar{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  backdrop-filter: blur(15px);
 }
  .link{
   justify-self: flex-end;
   display: flex;
   justify-content: center;
+  }
+
   
 
-}
-/*
-
- background: rgba(94, 94, 94, 0.418);
-  width: max-content;
-  padding: 0.7rem 0.7rem;
-  z-index: 3;
-  position: fixed;
-  left: 2%;
-  transform: translateX(-50%);
-  bottom: 2rem;
-  gap: 0.8rem;
-  border-radius: 3rem;
-  backdrop-filter: blur(15px);
-  height: 80vh;
-  justify-content: center;
-
-*/
 nav a {
   background: transparent;
   padding: 0.9rem;
   border-radius: 50%;
-  /* display: flex;  */
+
   color: var(--color-white);
   font-size: 1.1rem;
   margin-bottom: 0.7rem;
@@ -48,7 +40,8 @@ nav a {
   align-items: center;
 }
 nav a:hover {
- 
+ transform: scale(1.1);
+ color: var(--highlight-color);
 }
 
 nav a.active {
