--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   --color-bg-variant: #282828;
   --color-primary: #f3f3f3;
  --color-primary-variant: #6d7885;
- --highlight-color: #fba741;
+ --highlight-color: #0CCAFD;
   --color-white: #fff;
   --color-light: #969696;
   --container-width-lg: 75%; /*size of the container we are going to use on different*/
