--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -40,21 +40,24 @@ nav a {
   align-items: center;
 }
 
-.logo {
+.logo a {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.8rem;
+    text-decoration: none;
 }
 
 .logo img {
     height: 2rem;
     width: auto;
+    vertical-align: middle;
 }
 
 .logo span {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: 600;
     color: var(--color-primary);
+    white-space: nowrap;
 }
 
 nav a:hover {
