--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -22,6 +22,7 @@ nav {
   justify-self: flex-end;
   display: flex;
   justify-content: center;
+  margin-left: 30rem;
   }
 
   
@@ -35,7 +36,7 @@ nav a {
   font-size: 1.1rem;
   margin-bottom: 0.7rem;
   display: flex;
-  flex-direction: column;
+  
   justify-content: center;
   align-items: center;
 }
@@ -54,7 +55,7 @@ nav a {
 }
 
 .logo span {
-    font-size: 1rem;
+    font-size: rem;
     font-weight: 600;
     color: var(--color-primary);
     white-space: nowrap;
